[package]
edition = "2021"
name = "nom-errors"
version = "0.0.11"
#rust-version = "nightly"
authors = ["warlock <internalmike@gmail.com>"]
description = "Strong-typed errors support for nom parser combinator library."
readme = "README.md"
documentation = "https://docs.rs/nom-errors/"
keywords = ["nom", "typed", "error"]
categories = ["parsing"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/nom-errors"

[dependencies]
nom = "7.1.1"
paste = "1.0.11"

[badges]
maintenance = { status = "experimental" }
